# social_club

./: .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  requirements.txt  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: lcd8s52d5h84gvd8h4l2cy6v8qs4avxc-source
.github/workflows/: test.yml
src/: schema.yml
src/config/: settings.py  urls.py
src/messaging/: models.py  serializers.py  tests.py  urls.py  views.py
src/posts/: admin.py  models.py  tests.py  urls.py  views.py
src/posts/migrations/: 0001_initial.py
src/users/: models.py  serializers.py  tests.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_address_user_email_verified_user_helper_user_seeker_and_more.py  0003_rename_address_id_user_address_and_more.py  0004_rename_postel_code_address_postal_code.py  0007_delete_blacklistedtoken.py
